Added header logo
Positioned header nav and heading

--- a/src/component.css
+++ b/src/component.css
@@ -10,6 +10,12 @@
   align-items: center;
 }
 
+.flexbox-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .flexbox-row {
   display: flex;
 }
