--- a/src/main.css
+++ b/src/main.css
@@ -13,12 +13,24 @@
   margin-right: 140px;
 }
 
-#header > #WOTD {
-  margin-top: 300px;  
-}
-
 #header > nav > .nav-links {
   width: 500px;
 }
 
+#header > #WOTD {
+  margin-top: 300px;  
+}
+
+#recommendation {
+  padding: 60px 150px; 
+}
+
+#recommendation > div > h1 {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+#recommendation-container > * {
+  margin: 10px;
+}
 
