Added menu button

--- a/src/component.css
+++ b/src/component.css
@@ -46,3 +46,10 @@
 .font-dark {
   color: #000;
 }
+
+.button-primary {
+  padding: 15px 28px; 
+  background-color: #E29360;
+  color: #FFF;
+  font-size: 24px;
+}
