--- a/src/main.css
+++ b/src/main.css
@@ -25,12 +25,12 @@
   padding: 80px 150px; 
 }
 
-#recommendation > div > h1 {
+#recommendation > h1 {
   text-align: center;
   margin-bottom: 60px;
 }
 
-#recommendation-container > * {
+#recommendation > #recommendation-container > * {
   margin: 10px;
 }
 
@@ -41,4 +41,8 @@
 #menu > :nth-child(1) {
   background-color: rgba(0, 0, 0, 0.8);
   flex: 1;
+}
+
+#menu > :nth-child(1) > h1 {
+  margin-bottom: 40px;
 }
