--- a/src/main.css
+++ b/src/main.css
@@ -1,23 +1,20 @@
-#header {
+#banner {
   min-height: 1024px;
-  background: url("header-bg.png") no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("banner.png") no-repeat;
   background-size: cover;
-}
-
-#header {
   padding-top: 30px;
 }
 
-#header > nav {
+#banner > nav {
   margin-left: 140px;
   margin-right: 140px;
 }
 
-#header > nav > .nav-links {
+#banner > nav > .nav-links {
   width: 500px;
 }
 
-#header > #WOTD {
+#banner > #WOTD {
   margin-top: 300px;  
 }
 
