--- a/src/main.css
+++ b/src/main.css
@@ -13,16 +13,16 @@
   padding-top: 30px;
 }
 
-#banner > nav {
+#banner nav {
   margin-left: 140px;
   margin-right: 140px;
 }
 
-#banner > nav > .nav-links {
+#banner nav .nav-links {
   width: 500px;
 }
 
-#banner > #WOTD {
+#banner #WOTD {
   margin-top: 300px;  
 }
 
