--- a/src/component.css
+++ b/src/component.css
@@ -78,6 +78,9 @@ h4 {
   background-color: #E29360;
   color: #FFF;
   font-size: 24px;
+  text-decoration: none;
+  border: none;
+  text-align: center;
 }
 
 .social-media > :nth-child(2) {
