--- a/src/component.css
+++ b/src/component.css
@@ -117,18 +117,15 @@ c-placard {
   max-height: 720px;
 }
 
-c-placard h1 {
-  width: 700px;
-  text-align: center;
-}
-
-c-placard article > :nth-child(1) {
+c-placard article > div {
   background-color: rgba(0, 0, 0, 0.8);
   flex: 1;
 }
 
-c-placard article > :nth-child(1) > h1 {
-  margin-bottom: var(--article-heading-margin-bottom);
+c-placard article > div > h1 {
+  width: 700px;
+  text-align: center;
+  margin-bottom: 40px; 
 }
 
 
