--- a/src/component.css
+++ b/src/component.css
@@ -1,14 +1,14 @@
 :root {
-  --light-font-color: #FFF;
+  --light-font-color: #fff;
   --dark-font-color: #000;
-  --dark-variant-font-color: rgba(0,0,0, 0.5);
+  --dark-variant-font-color: rgba(0, 0, 0, 0.5);
 }
 
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: 'Fredoka One', cursive;
+  font-family: "Fredoka One", cursive;
 }
 
 main-nav nav {
@@ -16,10 +16,19 @@ main-nav nav {
   margin-right: 140px;
 }
 
-main-nav nav .nav-links {
+main-nav nav .link-container {
   width: 500px;
+  font-size: 18px;
 }
 
+.nav-link {
+  text-decoration: none;
+}
+
+.nav-link,
+.nav-link:visited {
+  color: var(--light-font-color);
+}
 
 h1 {
   font-size: 64px;
@@ -44,7 +53,7 @@ h4 {
   align-items: center;
 }
 
-.flexbox-hcenter{
+.flexbox-hcenter {
   display: flex;
   justify-content: center;
 }
@@ -82,9 +91,9 @@ h4 {
 }
 
 .button-primary {
-  padding: 15px 28px; 
-  background-color: #E29360;
-  color: #FFF;
+  padding: 15px 28px;
+  background-color: #e29360;
+  color: #fff;
   font-size: 24px;
   text-decoration: none;
   border: none;
@@ -95,23 +104,22 @@ h4 {
   margin-left: 10px;
 }
 
-.nav-links {
-  font-size: 18px;
-  color: var(--light-font-color);
-}
-
-
 /* VARIANT CLASSES */
-.light-theme h1, .light-theme p, .light-theme a {
+.dark-theme h1,
+.dark-theme p,
+.dark-theme a,
+.dark-theme .nav-link,
+.dark-theme .nav-link:visited {
   color: var(--light-font-color);
 }
 
-.dark-theme h1, .light-theme p, .light-theme a {
+.light-theme h1,
+.light-theme p,
+.light-theme a,
+.light-theme .nav-link,
+.light-theme .nav-link:visited {
   color: var(--dark-font-color);
 }
-
-
-
 
 c-placard {
   max-height: 720px;
@@ -125,11 +133,8 @@ c-placard article > div {
 c-placard article > div > h1 {
   width: 700px;
   text-align: center;
-  margin-bottom: 40px; 
+  margin-bottom: 40px;
 }
-
-
-
 
 #footer {
   padding: 0px 150px;
