--- a/src/component.css
+++ b/src/component.css
@@ -30,6 +30,20 @@ main-nav nav .link-container {
   color: var(--light-font-color);
 }
 
+
+
+main-header header {
+  min-height: 1024px;
+  background-size: cover;
+  padding-top: 30px;
+}
+
+main-header header > h1 {
+  margin-top: 300px;  
+}
+
+
+
 h1 {
   font-size: 64px;
 }
