--- a/src/component.css
+++ b/src/component.css
@@ -30,8 +30,6 @@ main-nav nav .link-container {
   color: var(--light-font-color);
 }
 
-
-
 main-header header {
   min-height: 1024px;
   background-size: cover;
@@ -39,13 +37,15 @@ main-header header {
 }
 
 main-header header > h1 {
-  margin-top: 300px;  
+  margin-top: 300px;
 }
-
-
 
 h1 {
   font-size: 64px;
+}
+
+h2 {
+  font-size: 48px;
 }
 
 h3 {
@@ -105,6 +105,7 @@ h4 {
 }
 
 .button-primary {
+  cursor: pointer;
   padding: 15px 28px;
   background-color: #e29360;
   color: #fff;
