--- a/src/about.css
+++ b/src/about.css
@@ -19,3 +19,17 @@ main {
    justify-content:  flex-end; 
    text-align: right;
 }
+
+.profile > img{
+    width: 150px;
+    height: 150px;  
+    object-fit: contain;
+    
+}
+
+body{
+    /* background-color: #e6ac86; */
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom right, #fff 0%, #fff 50%, #e6ac86 50%, #e6ac86 100%);
+}
